// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhancer -> _historyAttemptDispatchAction() dispatches action matching pathname when history location changes 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/second/foo",
        "payload": Object {
          "param": "foo",
        },
        "type": "SECOND",
      },
      "history": undefined,
      "kind": "pop",
      "prev": Object {
        "pathname": "",
        "payload": Object {},
        "type": "",
      },
    },
  },
  "payload": Object {
    "param": "foo",
  },
  "type": "SECOND",
}
`;

exports[`enhancer dispatches location-aware action when store is first created so app is location aware on load 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
      "history": undefined,
      "kind": "load",
      "prev": Object {
        "pathname": "",
        "payload": Object {},
        "type": "",
      },
    },
  },
  "payload": Object {},
  "type": "FIRST",
}
`;

exports[`enhancer listens to history changes and dispatches actions matching history's location.pathname 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/second/bar",
        "payload": Object {
          "param": "bar",
        },
        "type": "SECOND",
      },
      "history": undefined,
      "kind": "push",
      "prev": Object {
        "pathname": "",
        "payload": Object {},
        "type": "",
      },
    },
  },
  "payload": Object {
    "param": "bar",
  },
  "type": "SECOND",
}
`;

exports[`middleware -> _afterRouteChange() calls onBackNext handler when /pop|back|next/.test(kind) 1`] = `
Object {
  "type": "FOO",
}
`;

exports[`middleware dispatches location-aware action, changes address bar + document.title 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/second/bar",
        "payload": Object {
          "param": "bar",
        },
        "type": "SECOND",
      },
      "history": undefined,
      "kind": "push",
      "prev": Object {
        "pathname": "",
        "payload": Object {},
        "type": "",
      },
    },
  },
  "payload": Object {
    "param": "bar",
  },
  "type": "SECOND",
}
`;

exports[`middleware dispatches location-aware action, changes address bar + document.title 2`] = `
Object {
  "location": Object {
    "hasSSR": undefined,
    "history": undefined,
    "kind": "push",
    "pathname": "/second/bar",
    "payload": Object {
      "param": "bar",
    },
    "prev": Object {
      "pathname": "",
      "payload": Object {},
      "type": "",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "type": "SECOND",
  },
  "title": "title: SECOND",
}
`;

exports[`middleware if onBeforeChange dispatches redirect, route changes with kind === "redirect" 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "redirect",
  "pathname": "/third",
  "payload": Object {},
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "THIRD",
}
`;

exports[`middleware onBeforeChange redirect on server results in 1 history entry 1`] = `
Object {
  "hasSSR": true,
  "history": undefined,
  "kind": "redirect",
  "pathname": "/third",
  "payload": Object {},
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "THIRD",
}
`;

exports[`middleware user dispatches NOT_FOUND and middleware adds missing info to action 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": "load",
      "prev": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`middleware user dispatches NOT_FOUND redirect and middleware adds missing info to action 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/not-found",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": "redirect",
      "prev": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "@@redux-first-router/NOT_FOUND",
}
`;
